[workspace]
members = [
    "crates/btrfs-csi",
    "crates/btrfs-exchange",
    "crates/btrfs-protocol",
    "crates/btrfs-ops",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["btrfs-csi contributors"]

[workspace.dependencies]
# Local crates
btrfs-protocol = { path = "crates/btrfs-protocol" }
btrfs-ops = { path = "crates/btrfs-ops" }
btrfs-exchange = { path = "crates/btrfs-exchange" }
btrfs-csi = { path = "crates/btrfs-csi" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# Cryptography (for HMAC auth)
hmac = "0.12"
sha2 = "0.10"

# Random
rand = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Network
bytes = "1"

# Hashing
blake3 = "1.5"

# UUID
uuid = { version = "1", features = ["v4"] }

# Metrics
prometheus = "0.13"

# Async traits
async-trait = "0.1"

# Futures
futures = "0.3"
