[package]
name = "btrfs-ops"
description = "Btrfs filesystem operations"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
blake3.workspace = true
