[package]
name = "btrfs-protocol"
description = "Communication protocol for btrfs-csi cluster"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
bytes.workspace = true
serde.workspace = true
bincode.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
blake3.workspace = true
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
hex = "0.4"
raw-cpuid.workspace = true
